--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,23 @@
-.container {
-  max-width: 600px;
-  margin: 0 auto;
-  border: 1px solid #ccc;
-  display: flex;
-  justify-content: space-between;
-  align-items: end;
-  gap: 30px;
-  min-height: 200px;
-  
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.item {
-  background-color: tomato;
+body {
+  font-family: "Nunito", Helvetica, Arial, sans-serif;
+  color: #222222;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
 }
