--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* Estilos Gerais e Reset */
+
 * {
   margin: 0;
   padding: 0;
@@ -20,4 +22,28 @@ a {
 img {
   display: block;
   max-width: 100%;
+}
+
+/* Estilo Superinfo */
+
+.superinfo-bg {
+  background: #122ab1;
+  color: #fff;
+}
+
+.superinfo {
+  max-width: 960px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding-top: 10px;
+}
+
+.superinfo p, .superinfo a {
+  margin: 0 10px 10px 10px;
+}
+
+.superinfo-bg a {
+  color: #fff;
 }
