--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ img {
   max-width: 100%;
 }
 
-/* Estilo Superinfo */
+/* Superinfo */
 
 .superinfo-bg {
   background: #122ab1;
@@ -40,10 +40,51 @@ img {
   padding-top: 10px;
 }
 
-.superinfo p, .superinfo a {
+.superinfo p,
+.superinfo a {
   margin: 0 10px 10px 10px;
 }
 
 .superinfo-bg a {
   color: #fff;
+}
+
+/* Menu */
+.menu-bg {
+  background: #2c70ff;
+}
+
+.menu {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 15px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu a {
+  color: #fff;
+}
+
+.menu-logo {
+  font-size: 2.25rem;
+  font-weight: bold;
+  margin: 0 10px;
+}
+
+.menu-nav ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.menu-nav a {
+  font-size: 1.25rem;
+  display: block;
+  padding: 10px;
+}
+
+.menu-nav a:hover {
+  color: #122ab2;
 }
